--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
-
+<!-- sử sửa llll -->
   <body>
     <section class="game-page">
       <div class="game">
