--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="overlay-content">
           <h1>tic tac toe</h1>
-
+<!-- cập nhật -->
           <p class="game-status">
             Status: <span id="gameStatus">LOADING</span>
           </p>
