--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="overlay-content">
           <h1>tic tac toe</h1>
 <!-- cập nhật -->
+<!-- thử cập nhật 2 -->
           <p class="game-status">
             Status: <span id="gameStatus">LOADING</span>
           </p>
