--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
       </div>
     </section>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main_supervip.js"></script>
   </body>
 </html>
